# fast-insight-engine

./: .gitignore  Cargo.toml  README.md  WASM_USAGE.md  test_underdetermined_check.sh
doc/: file_convert_guid.md
docs/: fp_growth.md
examples/: employees.csv  products.json
shaders/: kmeans_compute.wgsl  knn_compute.wgsl
src/: dataset.rs  engine.rs  lib.rs  main.rs  stats.rs
src/arrow_handler/: builder.rs  mod.rs  parser.rs
src/file_convert/: converter.rs  csv_parser.rs  error.rs  excel_loader.rs  mod.rs  parquet_writer.rs  types.rs
src/fp_growth/: algorithm.rs  mod.rs  tree.rs
src/gpu/: mod.rs
src/insight_core/: feature.rs  knn_kdtree.rs  mod.rs  model.rs
src/utils/: error.rs  mod.rs  scaling.rs  type_convert.rs
tests/: batch_prediction.rs  csv_to_parquet_integration.rs  parquet_footer_validation.rs  schema_hint_integration.rs
