[package]
name = "fast-insight-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.85"
ndarray = { version = "0.16.1", features = ["serde"] }
linfa = "0.8.1"
linfa-clustering = "0.8.1"
linfa-linear = "0.8.1"
extended-isolation-forest = "0.2.3"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
arrow = "57.2.0"
