[package]
name = "fast-insight-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.85"
ndarray = "0.16.1"
linfa = "0.8.1"
linfa-clustering = "0.8.1"
linfa-linear = "0.8.1"
smartcore = { version = "0.4.9", features = ["ndarray-bindings"] }
getrandom = { version = "0.2", features = ["js"] }
arrow = "57.2.0"
kiddo = "4.2"
wgpu = "0.20"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["GpuDevice", "GpuQueue", "GpuAdapter", "Window", "Navigator", "Gpu", "console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
